--- a/StockMangementAPI/appsettings.json
+++ b/StockMangementAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StockMangmentDB": "Data Source=AAYUSH\\SQLEXPRESS;Initial Catalog=StockMangmentDB;Integrated Security=true;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "aayushtanna_aayushtanna_aayushtanna_aayushtanna_aayushtanna",
+    "Issuer": "JwtIssuer",
+    "Audience": "JwtAudience",
+    "Subject": "JwtSubject"
   }
+
 }
